Debugging swagger documentation
